--- a/graphite-async.opam
+++ b/graphite-async.opam
@@ -4,6 +4,7 @@ author: "Team Raccoon"
 homepage: "https://github.com/issuu/graphite-async"
 dev-repo: "git@github.com:issuu/graphite-async.git"
 bug-reports: "https://github.com/issuu/graphite-async/issues"
+doc: "https://issuu.github.io/graphite-async/"
 build: [["dune" "build" "-p" name "-j" jobs]]
 build-test: [["dune" "runtest" "-p" name "-j" jobs]]
 depends: [
