Graphite.Report module

--- a/graphite-async.opam
+++ b/graphite-async.opam
@@ -13,6 +13,8 @@ depends: [
   "core_kernel" {>= "v0.9" & < "v0.12"}
   "amqp-client-async" {>= "2.0.0" & < "3.0.0"}
   "ppx_let" {>= "v0.9" & < "v0.12"}
+  "ppx_deriving" {>= "4.2" & < "4.3"}
+  "ppx_driver" {build}
   "alcotest" {test}
   "fmt" {test}
 ]
