--- a/lib/dune
+++ b/lib/dune
@@ -2,4 +2,4 @@
   (name graphite_async)
   (public_name graphite-async)
   (libraries core_kernel amqp-client-async async)
-  (preprocess (pps ppx_let)))
+  (preprocess (pps ppx_let ppx_deriving.show)))
