--- a/graphite-async.opam
+++ b/graphite-async.opam
@@ -16,10 +16,10 @@ build: [["dune" "build" "-p" name "-j" jobs]]
 run-test: [["dune" "runtest" "-p" name "-j" jobs]]
 depends: [
   "dune" {build}
-  "async_kernel" {>= "v0.9" & < "v0.12"}
-  "core_kernel" {>= "v0.9" & < "v0.12"}
+  "async_kernel" {>= "v0.9"}
+  "core_kernel" {>= "v0.9"}
   "amqp-client-async" {>= "2.0.0" & < "3.0.0"}
-  "ppx_let" {>= "v0.9" & < "v0.12"}
+  "ppx_let" {>= "v0.9"}
   "ppx_deriving" {>= "4.2" & < "4.3"}
   "alcotest" {with-test}
   "fmt" {with-test}
