Reformat according to ocamlformat

--- a/test/dune
+++ b/test/dune
@@ -1,9 +1,12 @@
 (executable
  (name test)
- (preprocess (pps ppx_let))
+ (preprocess
+  (pps ppx_let))
  (libraries alcotest graphite_async))
 
 (alias
  (name runtest)
- (deps (:test test.exe))
- (action (run %{test})))
+ (deps
+  (:test test.exe))
+ (action
+  (run %{test})))
