--- a/lib/dune
+++ b/lib/dune
@@ -1,5 +1,6 @@
 (library
-  (name graphite_async)
-  (public_name graphite-async)
-  (libraries core_kernel amqp-client-async async)
-  (preprocess (pps ppx_let ppx_deriving.show)))
+ (name graphite_async)
+ (public_name graphite-async)
+ (libraries core_kernel amqp-client-async async)
+ (preprocess
+  (pps ppx_let ppx_deriving.show)))
